added JavaDoc, additional unit tests and refactored frontend